Add flash message to application layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+<%= flash.each do |notice, message| %>
+	<div class='flash' id=<%= notice %>'>
+		<%= message %>
+	</div>
+<% end %>
+
 <%= yield %>
 
 </body>
