Associate users to tickets when tickets are created

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 		</ul>
 	</nav>
 
-	<%= flash.each do |notice, message| %>
+	<% flash.each do |notice, message| %>
 		<div class='flash' id='<%= notice %>'>
 			<%= message %>
 		</div>
